--- a/蘵感ZanGan上傳/style.css
+++ b/蘵感ZanGan上傳/style.css
@@ -742,7 +742,7 @@ img {
 }
 
 /* RED手機 */
-@media (max-width:576px){
+@media (max-width:576px) {
     #course {
         width: 68%;
         height: 110vh;
@@ -1063,35 +1063,42 @@ img {
     right: 105px; */
     /* border: solid 3px red; */
 }
+
 /* RWD手機 */
-@media (max-width:576px){
-    #teachers{
+@media (max-width:576px) {
+    #teachers {
         width: 68%;
         height: 70vh;
     }
-    #teachers .nav{
+
+    #teachers .nav {
         margin: -200px 0 0 10px;
     }
-    #teachers .nav h3{
+
+    #teachers .nav h3 {
         margin-bottom: 10px;
     }
-    #teachers .nav hr{
+
+    #teachers .nav hr {
         width: 15em;
     }
-    #teachers .bglogo{
+
+    #teachers .bglogo {
         width: 55%;
         height: 10vh;
         position: absolute;
         z-index: 9;
-        margin: -350px 0 0 -650px ;
+        margin: -350px 0 0 -650px;
     }
-    #teachers .track{
+
+    #teachers .track {
         margin-top: 40px;
     }
 }
+
 /* RWD桌電 */
-@media (min-width:992px){
-    #teachers .bglogo{
+@media (min-width:992px) {
+    #teachers .bglogo {
         display: none;
     }
 }
@@ -1183,32 +1190,38 @@ img {
 
 /* RED手機 */
 @media (max-width:576px) {
-    #news{
+    #news {
         width: 68%;
         height: 70vh;
         margin-top: 200px;
     }
-    #news .pho img{
+
+    #news .pho img {
         width: 265px;
         height: 250px;
         margin: -495px 0 0 0;
         object-fit: cover;
     }
-    #news .uu{
+
+    #news .uu {
         width: 100%;
         margin: 400px 0 0 -265px;
     }
-    #news .nav h1{
+
+    #news .nav h1 {
         font-size: 1.5rem;
         letter-spacing: 0.01rem;
     }
-    #news hr{
+
+    #news hr {
         width: 15em;
     }
-    #news .more{
+
+    #news .more {
         margin: 10px -5px 0 0;
     }
-    #news .arrow img{
+
+    #news .arrow img {
         display: none;
     }
 }
@@ -1238,7 +1251,7 @@ img {
 #media .nav h3 {
     font-family: 'Unna', serif;
     /* font-size: 14px; */
-   font-size: 0.875rem;
+    font-size: 0.875rem;
 }
 
 /* 2023.1.16 */
@@ -1256,6 +1269,7 @@ img {
     margin-top: 25px;
     width: 100%;
 }
+
 /* 每一張圖片 */
 #media .img img {
     width: 100%;
@@ -1334,57 +1348,67 @@ img {
 
 /* RED手機 */
 @media (max-width:576px) {
-    #media{
+    #media {
         width: 68%;
         height: 105vh;
         margin-top: 300px;
     }
-    #media .span{
+
+    #media .span {
         width: 100%;
         height: 80px;
         margin: 0 0 0 -10px;
     }
-    #media .span h3{
+
+    #media .span h3 {
         margin: 50px 100px 0 0;
     }
-    #media .nav img{
+
+    #media .nav img {
         width: 240px;
         height: 100px;
-        margin:-100px 0 0 -220px ;
+        margin: -100px 0 0 -220px;
     }
-    #media .span hr{
+
+    #media .span hr {
         width: 15em;
-        margin-top:8px ;
+        margin-top: 8px;
     }
+
     #media .item4,
     #media .item5,
-    #media .item6{
+    #media .item6 {
         display: none;
     }
-    #media .main{
+
+    #media .main {
         margin: 0 0 0 30px;
         display: flex;
         flex-direction: column;
     }
-    #media h2{
+
+    #media h2 {
         font-size: 0.85rem;
         font-weight: 700;
         letter-spacing: 0.05rem;
         width: 85%;
         line-height: 1.5em;
     }
-    #media .img img{
+
+    #media .img img {
         width: 80%;
-        margin: -40px 0 -50px 0 ;
+        margin: -40px 0 -50px 0;
     }
-    #media h3{
+
+    #media h3 {
         width: 85%;
         letter-spacing: 0.03rem;
     }
-    #media .more{
-        margin-bottom:30px ;
+
+    #media .more {
+        margin-bottom: 30px;
     }
-    
+
 }
 
 /* 8.footer */
@@ -1397,6 +1421,7 @@ img {
     /* margin-top: 400px; */
     width: 100%;
     height: 50vh;
+    position: relative;
 }
 
 #footer img {
@@ -1477,45 +1502,92 @@ img {
     /* border: solid 3px rgb(200, 134, 134);  */
 }
 
+#footer .blank {
+    background-color: #3C4935;
+    /* background-color: red; */
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    left: 80px;
+    top: 80px;
+}
+
 /* RED手機 */
 @media (max-width:576px) {
-    #footer{
+    #footer {
         width: 68%;
         height: 30vh;
-        /* height: 250px; */
-        margin: 50px 0 0 0 ;
+        overflow: hidden;
     }
-    .footer_nav{
+
+    .footer_nav img {
+        width: 10%;
+        height: 50px;
+        margin: -50px 0 0 310px;
+    }
+
+    #footer .copyright {
+        margin-left: -5px;
+    }
+
+    .footer_nav {
         margin: 40px 0 0 -355px;
     }
-    #footer .eng{
+
+    #footer .eng {
         font-size: 1.2rem;
         margin-bottom: -10px;
     }
-    .footer_nav .addr{
+
+    .footer_nav .addr {
         width: 11em;
         font-size: 0.75rem;
         line-height: 1.5em;
         margin-bottom: -150px;
         letter-spacing: 0.2em;
     }
+
     #footer h3 .time {
-        margin: 20px 0 0 -87px ;
+        margin: 20px 0 0 -85px;
     }
-    #footer h3 .time h3{
+
+    #footer h3 .time h3 {
         font-size: 0.75rem;
+        letter-spacing: 0.15em;
     }
-    #footer .icon_soc{
+
+    #footer .icon_soc {
         width: 300px;
-        margin: -280px 0 0 -200px ;
+        margin: -280px 0 0 -200px;
     }
-    #footer .contact{
+
+    #footer .contact {
         margin: 30px 0 0 -205px;
     }
-    #footer .contact h3{
+
+    #footer .contact h3 {
         font-size: 0.75rem;
         line-height: 5em;
         letter-spacing: 0.1em;
+    }
+
+    #footer .faq {
+        margin: -125px 0 0 -560px;
+    }
+
+    #footer .faq h3 {
+        font-size: 0.75rem;
+        line-height: 5em;
+        letter-spacing: 0.1em;
+    }
+
+    #footer .blank {
+        background-color: #3C4935;
+        width: 100px;
+        height: 55px;
+        position: absolute;
+        left: 50px;
+        top: 0px;
     }
 }
 
