--- a/zangan首頁手機RWDtopbar跑出來0612/style.css
+++ b/zangan首頁手機RWDtopbar跑出來0612/style.css
@@ -1181,7 +1181,7 @@ img {
 
 #teachers::before,
 #teachers::after {
-    background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+    /* background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%); */
     content: "";
     height: 100px;
     position: absolute;
